<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.pacote.animalquiz.MainActivity"
    android:background="@drawable/fundoum"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="65dp"
            android:textColor="#000000"
            android:fontFamily="cursive"
            />

            <EditText
                android:id="@+id/edtApelido"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edtApelido"
                android:background="@color/white"
                android:textSize="20dp"
                />



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/caticon"
            />

        <Button
            android:id="@+id/btnJogar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnJogar"
            android:layout_marginTop="15dp"
            android:onClick="btnJogarOnClick"
            android:background="#7FFF00"
            />
    </LinearLayout>


</RelativeLayout>
